--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit
-pandas
-numpy
-io
-fileinput
-zipfile
-os
-zipfile
-subprocess
+#streamlit
+#pandas
+#numpy
+#io
+#fileinput
+#zipfile
+#os
+#zipfile
+#subprocess
+#
